chore: refactor dockerfile

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -138,7 +138,8 @@ CONTRACT_MAX_STRING_LENGTH_WITHOUT_TRIMMING=2040
 # CONTRACT_AUDIT_REPORTS_AIRTABLE_API_KEY=
 # CONTRACT_CERTIFIED_LIST=
 UNCLES_IN_AVERAGE_BLOCK_TIME=false
-DISABLE_WEBAPP=false
+DISABLE_WEBAPP=true
+ADMIN_PANEL_ENABLED=false
 API_V2_ENABLED=true
 API_V1_READ_METHODS_DISABLED=false
 API_V1_WRITE_METHODS_DISABLED=false
