--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -347,7 +347,9 @@ jobs:
             ${{ runner.os }}-${{ env.ELIXIR_VERSION }}-${{ env.OTP_VERSION }}-${{ env.MIX_ENV }}-blockscoutweb-npm-
 
       - name: Run cspell
-        uses: streetsidesoftware/cspell-action@v2
+        uses: streetsidesoftware/cspell-action@v6
+        with:
+          use_cspell_files: true
 
   eslint:
     name: ESLint
