refactor: cspell configuration (#11146)
* fix: cspell ignore weird IPFS url

* fix: cspell ignore filecoin f410f addresses

* chore: write ignore in single line

* feat: configure everything in `cspell.json`

* refactor: remove unnecessary cspell ignores

* refactor: cspell run command in actions and devcontainer

* chore: enable editor support

* chore: add comment

* fix: cspell action options

* feat: run for all files

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -366,10 +366,8 @@ jobs:
       - name: Run cspell
         uses: streetsidesoftware/cspell-action@v6
         with:
-          files: |
-            **/*.ex*
-            **/*.eex
-            **/*.js"
+          use_cspell_files: true
+          incremental_files_only: false
 
   eslint:
     name: ESLint
