feat: AirTable API Proxy

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -449,6 +449,8 @@ TENDERLY_CHAIN_PATH=
 # ZERION_API_TOKEN=
 # XNAME_BASE_API_URL=
 # XNAME_API_TOKEN=
+# AIR_TABLE_BASE_API_URL=
+# AIR_TABLE_API_TOKEN=
 # BRIDGED_TOKENS_ENABLED=
 # BRIDGED_TOKENS_ETH_OMNI_BRIDGE_MEDIATOR=
 # BRIDGED_TOKENS_BSC_OMNI_BRIDGE_MEDIATOR=
