add one version

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -7,7 +7,7 @@ ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
 # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL=
 # ETHEREUM_JSONRPC_HTTP_TIMEOUT=
 NETWORK=
-SUBNETWORK=Awesome chain
+SUBNETWORK=MAC chain
 LOGO=/images/blockscout_logo.svg
 # ETHEREUM_JSONRPC_WS_URL=
 ETHEREUM_JSONRPC_TRANSPORT=http
@@ -15,21 +15,21 @@ ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
 # ETHEREUM_JSONRPC_HTTP_HEADERS=
 IPC_PATH=
 NETWORK_PATH=/
-BLOCKSCOUT_HOST=
+BLOCKSCOUT_HOST=https://macgonglian.cc
 BLOCKSCOUT_PROTOCOL=
 # SECRET_KEY_BASE=
 # CHECK_ORIGIN=
 PORT=4000
-COIN_NAME=
+COIN_NAME=MAC
 # METADATA_CONTRACT=
 # VALIDATORS_CONTRACT=
 # KEYS_MANAGER_CONTRACT=
 # REWARDS_CONTRACT=
 # TOKEN_BRIDGE_CONTRACT=
 EMISSION_FORMAT=DEFAULT
-# CHAIN_SPEC_PATH=
+CHAIN_SPEC_PATH="/root/my_geth/genesis.json"
 # SUPPLY_MODULE=
-COIN=
+COIN=MAC
 EXCHANGE_RATES_COIN=
 # EXCHANGE_RATES_SOURCE=
 # EXCHANGE_RATES_COINGECKO_COIN_ID=
@@ -50,22 +50,22 @@ ECTO_USE_SSL=false
 # SPANDEX_SYNC_THRESHOLD=
 HEART_BEAT_TIMEOUT=30
 # HEART_COMMAND=
-#BLOCKSCOUT_VERSION=
+BLOCKSCOUT_VERSION=5.2.1
 RELEASE_LINK=
-BLOCK_TRANSFORMER=base
+BLOCK_TRANSFORMER=clique
 # GRAPHIQL_TRANSACTION=
 # BLOCK_RANGES=
 # FIRST_BLOCK=
 # LAST_BLOCK=
 # TRACE_FIRST_BLOCK=
 # TRACE_LAST_BLOCK=
-# FOOTER_CHAT_LINK=
-# FOOTER_FORUM_LINK_ENABLED=
-# FOOTER_FORUM_LINK=
-# FOOTER_TELEGRAM_LINK_ENABLED=
-# FOOTER_TELEGRAM_LINK=
-# FOOTER_GITHUB_LINK=
-FOOTER_LOGO=/images/blockscout_logo.svg
+FOOTER_CHAT_LINK=https://t.me/MythicalAnimals_Channel
+FOOTER_FORUM_LINK_ENABLED=https://x.com/MAC_OFF_INT?2
+FOOTER_FORUM_LINK=https://x.com/MAC_OFF_INT?3
+FOOTER_TELEGRAM_LINK_ENABLED=https://t.me/MythicalAnimals_Channel?4
+FOOTER_TELEGRAM_LINK=https://t.me/MythicalAnimals_Channel?5
+FOOTER_GITHUB_LINK=https://x.com/MAC_OFF_INT?6
+FOOTER_LOGO=/images/Frame.svg
 FOOTER_LINK_TO_OTHER_EXPLORERS=false
 FOOTER_OTHER_EXPLORERS={}
 SUPPORTED_CHAINS={}
@@ -130,7 +130,7 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # TOKEN_ID_MIGRATION_BATCH_SIZE=
 # INDEXER_INTERNAL_TRANSACTIONS_TRACER_TYPE=
 # WEBAPP_URL=
-# API_URL=
+API_URL=https://macgonglian.cc
 SHOW_ADDRESS_MARKETCAP_PERCENTAGE=true
 CHECKSUM_ADDRESS_HASHES=true
 CHECKSUM_FUNCTION=eth
@@ -152,7 +152,7 @@ MAINTENANCE_ALERT_MESSAGE=
 SOURCIFY_INTEGRATION_ENABLED=false
 SOURCIFY_SERVER_URL=
 SOURCIFY_REPO_URL=
-CHAIN_ID=
+CHAIN_ID=7156777
 MAX_SIZE_UNLESS_HIDE_ARRAY=50
 HIDE_BLOCK_MINER=false
 DISPLAY_TOKEN_ICONS=false
@@ -163,7 +163,7 @@ RE_CAPTCHA_CLIENT_KEY=
 RE_CAPTCHA_V3_SECRET_KEY=
 RE_CAPTCHA_V3_CLIENT_KEY=
 RE_CAPTCHA_DISABLED=false
-JSON_RPC=
+JSON_RPC=https://macrpc.macgonglian.cc
 #API_RATE_LIMIT_DISABLED=true
 API_RATE_LIMIT_TIME_INTERVAL=1s
 API_RATE_LIMIT_BY_IP_TIME_INTERVAL=5m
