--- a/pipelines/github-forking-pipeline.yml
+++ b/pipelines/github-forking-pipeline.yml
@@ -16,6 +16,9 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- script: |
+    echo $(Build.Repository.Uri)
+
 - task: mirror-git-repository-vsts-task@1
   inputs:
     sourceGitRepositoryUri: '$(Build.Repository.Uri)'
