Update docker config for Testnet

--- a/docker-testnet/services/stats.yml
+++ b/docker-testnet/services/stats.yml
@@ -39,7 +39,7 @@ services:
     pull_policy: always
     platform: linux/amd64
     restart: always
-    container_name: 'stats_testnet'
+    container_name: 'stats-testnet'
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     env_file:
