--- a/docker-luxnet/services/blockscout.yml
+++ b/docker-luxnet/services/blockscout.yml
@@ -1,12 +1,12 @@
 version: '3.9'
 
 services:
-  backend:
+  blockscout:
     image: blockscout/${DOCKER_REPO:-blockscout}:${DOCKER_TAG:-latest}
     pull_policy: always
     restart: always
     stop_grace_period: 5m
-    container_name: 'backend'
+    container_name: 'blockscout_luxnet'
     command: sh -c "bin/blockscout eval \"Elixir.Explorer.ReleaseTasks.create_and_migrate()\" && bin/blockscout start"
     extra_hosts:
       - 'host.docker.internal:host-gateway'
