--- a/docker-luxnet/services/blockscout.yml
+++ b/docker-luxnet/services/blockscout.yml
@@ -6,7 +6,7 @@ services:
     pull_policy: always
     restart: always
     stop_grace_period: 5m
-    container_name: 'blockscout_luxnet'
+    container_name: 'blockscout-luxnet'
     command: sh -c "bin/blockscout eval \"Elixir.Explorer.ReleaseTasks.create_and_migrate()\" && bin/blockscout start"
     extra_hosts:
       - 'host.docker.internal:host-gateway'
