feat: Add Stylus verificaiton support (#11183)
* feat: Add Stylus verificaiton support

* Fix tests

* Apply suggestions from code review

Co-authored-by: Alexander Kolotov <alexandr.kolotov@gmail.com>

* Refactoring + handle snake case

* Add env to docker-compose/envs/common-blockscout.env

* Apply suggestions from code review

Co-authored-by: Alexander Kolotov <alexandr.kolotov@gmail.com>

* Fix cspell

* Drop MICROSERVICE_STYLUS_VERIFIER_ENABLED

* Fix tests

* Fix tests

* Apply suggestions from code review

Co-authored-by: Alexander Kolotov <alexandr.kolotov@gmail.com>

* Process review comments

* Fix dialyzer

---------

Co-authored-by: Alexander Kolotov <alexandr.kolotov@gmail.com>

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -398,6 +398,7 @@ MICROSERVICE_ACCOUNT_ABSTRACTION_ENABLED=false
 MICROSERVICE_ACCOUNT_ABSTRACTION_URL=http://user-ops-indexer:8050/
 # MICROSERVICE_METADATA_URL=
 # MICROSERVICE_METADATA_ENABLED=
+# MICROSERVICE_STYLUS_VERIFIER_URL=
 DECODE_NOT_A_CONTRACT_CALLS=true
 # DATABASE_READ_ONLY_API_URL=
 # ACCOUNT_DATABASE_URL=
