feature: Export data to Multichain Search DB

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -410,6 +410,8 @@ MICROSERVICE_ACCOUNT_ABSTRACTION_URL=http://user-ops-indexer:8050/
 # MICROSERVICE_METADATA_URL=
 # MICROSERVICE_METADATA_ENABLED=
 # MICROSERVICE_STYLUS_VERIFIER_URL=
+# MICROSERVICE_MULTICHAIN_SEARCH_URL=
+# MICROSERVICE_MULTICHAIN_SEARCH_ENABLED=
 DECODE_NOT_A_CONTRACT_CALLS=true
 # DATABASE_READ_ONLY_API_URL=
 # ACCOUNT_DATABASE_URL=
@@ -455,6 +457,8 @@ EIP_1559_ELASTICITY_MULTIPLIER=2
 # MIGRATION_SANITIZE_DUPLICATED_LOG_INDEX_LOGS_BATCH_SIZE=
 # MIGRATION_REFETCH_CONTRACT_CODES_BATCH_SIZE=
 # MIGRATION_REFETCH_CONTRACT_CODES_CONCURRENCY=
+# MIGRATION_BACKFILL_MULTICHAIN_SEARCH_DB_CONCURRENCY=
+# MIGRATION_BACKFILL_MULTICHAIN_SEARCH_BATCH_SIZE=
 SOURCIFY_INTEGRATION_ENABLED=false
 SOURCIFY_SERVER_URL=
 SOURCIFY_REPO_URL=
