--- a/.github/workflows/release-gnosis.yml
+++ b/.github/workflows/release-gnosis.yml
@@ -2,8 +2,8 @@ name: Release for Gnosis Chain
 
 on:
   workflow_dispatch:
-  release:
-    types: [published]
+  # release:
+  #   types: [published]
 
 env:
   OTP_VERSION: ${{ vars.OTP_VERSION }}
