chore: Background migrations timeout (#11358)

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -447,6 +447,7 @@ EIP_1559_ELASTICITY_MULTIPLIER=2
 # TOKEN_TRANSFER_TOKEN_TYPE_MIGRATION_CONCURRENCY=
 # SANITIZE_INCORRECT_NFT_BATCH_SIZE=
 # SANITIZE_INCORRECT_NFT_CONCURRENCY=
+# SANITIZE_INCORRECT_NFT_TIMEOUT=
 # MIGRATION_RESTORE_OMITTED_WETH_TOKEN_TRANSFERS_CONCURRENCY=
 # MIGRATION_RESTORE_OMITTED_WETH_TOKEN_TRANSFERS_BATCH_SIZE=
 # MIGRATION_RESTORE_OMITTED_WETH_TOKEN_TRANSFERS_TIMEOUT=
@@ -482,6 +483,10 @@ TENDERLY_CHAIN_PATH=
 # WHITELISTED_WETH_CONTRACTS=
 # SANITIZE_INCORRECT_WETH_BATCH_SIZE=100
 # SANITIZE_INCORRECT_WETH_CONCURRENCY=1
+# SANITIZE_INCORRECT_WETH_TIMEOUT=
+# REINDEX_INTERNAL_TRANSACTIONS_STATUS_BATCH_SIZE=
+# REINDEX_INTERNAL_TRANSACTIONS_STATUS_CONCURRENCY=
+# REINDEX_INTERNAL_TRANSACTIONS_STATUS_TIMEOUT=
 # PUBLIC_METRICS_ENABLED=
 # PUBLIC_METRICS_UPDATE_PERIOD_HOURS=
 # CSV_EXPORT_LIMIT=
