--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -21,3 +21,4 @@ NEXT_PUBLIC_NETWORK_RPC_URL=https://rpc2.uomi.ai
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=322727203e59d903d5b47fc139685acd
 NEXT_PUBLIC_AD_BANNER_PROVIDER=none
 NEXT_PUBLIC_AD_TEXT_PROVIDER=none
+NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/Uomi-network/uomi-explorer/master/frontend-config/favicon.png
