Process review comments

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -371,8 +371,12 @@ EXTERNAL_APPS=[]
 # GAS_PRICE_ORACLE_SAFELOW_TIME_COEFFICIENT=
 # GAS_PRICE_ORACLE_AVERAGE_TIME_COEFFICIENT=
 # GAS_PRICE_ORACLE_FAST_TIME_COEFFICIENT=
-# RESTRICTED_LIST=
-# RESTRICTED_LIST_KEY=
+# ADDRESSES_BLACKLIST=
+# ADDRESSES_BLACKLIST_KEY=
+# ADDRESSES_BLACKLIST_URL=
+# ADDRESSES_BLACKLIST_UPDATE_INTERVAL=
+# ADDRESSES_BLACKLIST_RETRY_INTERVAL=
+# ADDRESSES_BLACKLIST_PROVIDER=
 SHOW_MAINTENANCE_ALERT=false
 MAINTENANCE_ALERT_MESSAGE=
 CHAIN_ID=
