--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -174,6 +174,7 @@ INDEXER_DISABLE_TOKEN_INSTANCE_REALTIME_FETCHER=false
 INDEXER_DISABLE_TOKEN_INSTANCE_RETRY_FETCHER=false
 INDEXER_DISABLE_TOKEN_INSTANCE_SANITIZE_FETCHER=false
 INDEXER_DISABLE_TOKEN_INSTANCE_LEGACY_SANITIZE_FETCHER=false
+# INDEXER_PENDING_TRANSACTIONS_SANITIZER_INTERVAL=
 INDEXER_DISABLE_PENDING_TRANSACTIONS_FETCHER=false
 INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_DISABLE_CATALOGED_TOKEN_UPDATER_FETCHER=
