--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -467,6 +467,7 @@ EIP_1559_ELASTICITY_MULTIPLIER=2
 # MIGRATION_REFETCH_CONTRACT_CODES_BATCH_SIZE=
 # MIGRATION_REFETCH_CONTRACT_CODES_CONCURRENCY=
 # MIGRATION_BACKFILL_MULTICHAIN_SEARCH_BATCH_SIZE=
+# MIGRATION_HEAVY_INDEX_OPERATIONS_CHECK_INTERVAL=
 SOURCIFY_INTEGRATION_ENABLED=false
 SOURCIFY_SERVER_URL=
 SOURCIFY_REPO_URL=
