--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -418,6 +418,7 @@ MICROSERVICE_ACCOUNT_ABSTRACTION_ENABLED=false
 MICROSERVICE_ACCOUNT_ABSTRACTION_URL=http://user-ops-indexer:8050/
 # MICROSERVICE_METADATA_URL=
 # MICROSERVICE_METADATA_ENABLED=
+# MICROSERVICE_METADATA_PROXY_REQUESTS_TIMEOUT=
 # MICROSERVICE_STYLUS_VERIFIER_URL=
 # MICROSERVICE_MULTICHAIN_SEARCH_URL=
 DECODE_NOT_A_CONTRACT_CALLS=true
