Add DB index operations for token_transfers table

--- a/.dialyzer-ignore
+++ b/.dialyzer-ignore
@@ -1,5 +1,10 @@
 lib/ethereum_jsonrpc/rolling_window.ex:171
 lib/explorer/migrator/heavy_db_index_operation/drop_logs_block_number_asc_index_asc_index.ex:6
+lib/explorer/migrator/heavy_db_index_operation/drop_token_transfers_block_number_asc_log_index_asc_index.ex:6
+lib/explorer/migrator/heavy_db_index_operation/drop_token_transfers_from_address_hash_transaction_hash_index.ex:6
+lib/explorer/migrator/heavy_db_index_operation/drop_token_transfers_to_address_hash_transaction_hash_index.ex:6
+lib/explorer/migrator/heavy_db_index_operation/drop_token_transfers_token_contract_address_hash_transaction_hash_index.ex:6
+lib/explorer/migrator/heavy_db_index_operation/drop_token_transfers_block_number_index.ex:6
 lib/explorer/smart_contract/solidity/publisher_worker.ex:1
 lib/explorer/smart_contract/vyper/publisher_worker.ex:1
 lib/explorer/smart_contract/stylus/publisher_worker.ex:1
