--- a/.dialyzer-ignore
+++ b/.dialyzer-ignore
@@ -6,6 +6,9 @@ lib/explorer/migrator/heavy_db_index_operation/drop_token_transfers_to_address_h
 lib/explorer/migrator/heavy_db_index_operation/drop_token_transfers_token_contract_address_hash_transaction_hash_index.ex:6
 lib/explorer/migrator/heavy_db_index_operation/drop_token_transfers_block_number_index.ex:6
 lib/explorer/migrator/heavy_db_index_operation/drop_internal_transactions_from_address_hash_index.ex:6
+lib/explorer/migrator/heavy_db_index_operation/drop_logs_address_hash_index.ex:6
+lib/explorer/migrator/heavy_db_index_operation/drop_logs_address_hash_transaction_hash_index.ex:6
+lib/explorer/migrator/heavy_db_index_operation/drop_logs_index_index.ex:6
 lib/explorer/smart_contract/solidity/publisher_worker.ex:1
 lib/explorer/smart_contract/vyper/publisher_worker.ex:1
 lib/explorer/smart_contract/stylus/publisher_worker.ex:1
