--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,6 +1,6 @@
 ETHEREUM_JSONRPC_VARIANT=geth
 #ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8545/
-ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8645/
+ETHEREUM_JSONRPC_HTTP_URL=https://evm-ignition-0.hoku.sh/
 # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
 DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
 
@@ -13,7 +13,7 @@ ETHEREUM_JSONRPC_TRANSPORT=http
 ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
 # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
 #ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
-ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8645/
+ETHEREUM_JSONRPC_TRACE_URL=https://evm-ignition-0.hoku.sh/
 # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL=
 # ETHEREUM_JSONRPC_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_FALLBACK_ETH_CALL_URL=
