Add Caddyfile and update envs

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+name: $project_name
 
 services:
   redis-db:
@@ -105,3 +105,17 @@ services:
     extends:
       file: ./services/nginx.yml
       service: proxy
+
+  caddy:
+    image: $caddy_image
+    restart: always
+    volumes:
+      - $workdir/caddy/Caddyfile:/etc/caddy/Caddyfile
+      - $workdir/caddy/data:/data
+    ports:
+      - $host_bind_ip:$caddy_http_port:80
+      - $host_bind_ip:$caddy_https_port:443
+
+networks:
+  default:
+    name: $project_name
