--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,7 +1,13 @@
+caddy_image="caddy:2.8-alpine"
+project_name=block-explorer
+workdir=./workdir
+host_bind_ip="fillme"
+
 ETHEREUM_JSONRPC_VARIANT=geth
 #ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8545/
 ETHEREUM_JSONRPC_HTTP_URL=https://evm-ignition-0.hoku.sh/
-# ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
+ETHEREUM_JSONRPC_WS_URL: ws://evm-ignition-0.hoku.sh/
+ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=https://evm-ignition-1.hoku.sh/
 DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
 
 # DATABASE_EVENT_URL=
