try env BLOCK_TRANSFORMER=clique

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -96,7 +96,7 @@ HEART_BEAT_TIMEOUT=30
 # HEART_COMMAND=
 # BLOCKSCOUT_VERSION=
 RELEASE_LINK=
-BLOCK_TRANSFORMER=base
+BLOCK_TRANSFORMER=clique
 # BLOCK_RANGES=
 # FIRST_BLOCK=
 # LAST_BLOCK=
