lots of clean up and fixes to envs

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     environment:
         ETHEREUM_JSONRPC_HTTP_URL: https://evm-ignition-0.hoku.sh/
         ETHEREUM_JSONRPC_TRACE_URL: https://evm-ignition-0.hoku.sh/
-        ETHEREUM_JSONRPC_WS_URL: ws://evm-ignition-0.hoku.sh/
+        ETHEREUM_JSONRPC_WS_URL: wss://evm-ignition-0.hoku.sh/
         CHAIN_ID: '2481632'
 
   nft_media_handler:
