--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,7 +1,7 @@
 ETHEREUM_JSONRPC_VARIANT=geth
 #ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8545/
 ETHEREUM_JSONRPC_HTTP_URL=https://evm-ignition-0.hoku.sh/
-ETHEREUM_JSONRPC_WS_URL: ws://evm-ignition-0.hoku.sh/
+ETHEREUM_JSONRPC_WS_URL: wss://evm-ignition-0.hoku.sh/
 ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=https://evm-ignition-1.hoku.sh/
 DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
 
@@ -96,7 +96,7 @@ HEART_BEAT_TIMEOUT=30
 # HEART_COMMAND=
 # BLOCKSCOUT_VERSION=
 RELEASE_LINK=
-BLOCK_TRANSFORMER=clique
+BLOCK_TRANSFORMER=base
 # BLOCK_RANGES=
 # FIRST_BLOCK=
 # LAST_BLOCK=
@@ -366,7 +366,7 @@ SHOW_ADDRESS_MARKETCAP_PERCENTAGE=true
 CHECKSUM_ADDRESS_HASHES=true
 CHECKSUM_FUNCTION=eth
 DISABLE_EXCHANGE_RATES=true
-TXS_STATS_ENABLED=true
+TXS_STATS_ENABLED=false
 SHOW_PRICE_CHART=false
 SHOW_PRICE_CHART_LEGEND=false
 SHOW_TXS_CHART=true
@@ -514,7 +514,7 @@ TENDERLY_CHAIN_PATH=
 # SHRINK_INTERNAL_TRANSACTIONS_ENABLED=
 # SHRINK_INTERNAL_TRANSACTIONS_BATCH_SIZE=
 # SHRINK_INTERNAL_TRANSACTIONS_CONCURRENCY=
-NFT_MEDIA_HANDLER_ENABLED=true
+NFT_MEDIA_HANDLER_ENABLED=false
 NFT_MEDIA_HANDLER_REMOTE_DISPATCHER_NODE_MODE_ENABLED=true
 RELEASE_NODE=producer@172.18.0.4
 RELEASE_DISTRIBUTION=name
