--- a/docker-compose/envs/common-user-ops-indexer.env
+++ b/docker-compose/envs/common-user-ops-indexer.env
@@ -11,7 +11,7 @@ USER_OPS_INDEXER__SERVER__GRPC__ADDR=0.0.0.0:8051
 USER_OPS_INDEXER__API__MAX_PAGE_SIZE=100
 
 ## (required) no default value available
-USER_OPS_INDEXER__INDEXER__RPC_URL=""
+USER_OPS_INDEXER__INDEXER__RPC_URL="wss://evm-ignition-0.hoku.sh/"
 USER_OPS_INDEXER__INDEXER__CONCURRENCY=20
 USER_OPS_INDEXER__INDEXER__ENTRYPOINTS__V06=true
 USER_OPS_INDEXER__INDEXER__ENTRYPOINTS__V07=true
