--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,21 +1,25 @@
-NEXT_PUBLIC_API_HOST=localhost
-NEXT_PUBLIC_API_PROTOCOL=http
-NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
+NEXT_PUBLIC_API_HOST=explorer.testnet.hoku.sh
+NEXT_PUBLIC_API_PROTOCOL=https
+NEXT_PUBLIC_API_PORT=443
+NEXT_PUBLIC_API_BASE_PATH=/
+NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
+NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+
+NEXT_PUBLIC_STATS_API_HOST=https://explorer-stats.testnet.hoku.sh
 NEXT_PUBLIC_NETWORK_NAME=Hoku datachain
 NEXT_PUBLIC_NETWORK_SHORT_NAME=Hoku
 NEXT_PUBLIC_NETWORK_ID=5
 NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Hoku
 NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=HOKU
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
-NEXT_PUBLIC_API_BASE_PATH=/
-NEXT_PUBLIC_APP_HOST=localhost
-NEXT_PUBLIC_API_PORT=5001
-NEXT_PUBLIC_APP_PROTOCOL=http
+
+NEXT_PUBLIC_APP_HOST=explorer.testnet.hoku.sh
+NEXT_PUBLIC_APP_PROTOCOL=https
 NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs']
-NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8081
+NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/hokunet/blockscout/refs/heads/hoku-localnet/apps/block_scout_web/assets/static/images/Hoku_LogoLockup_Black.svg
+
+NEXT_PUBLIC_VISUALIZE_API_HOST=http://explorer-visualize.testnet.hoku.sh
+
 NEXT_PUBLIC_IS_TESTNET=true
-NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=ws
-NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
 NEXT_PUBLIC_AD_BANNER_PROVIDER=none
 NEXT_PUBLIC_AD_TEXT_PROVIDER=none
-NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/hokunet/blockscout/refs/heads/hoku-localnet/apps/block_scout_web/assets/static/images/Hoku_LogoLockup_Black.svg
