--- a/docker-compose/services/user-ops-indexer.yml
+++ b/docker-compose/services/user-ops-indexer.yml
@@ -10,6 +10,6 @@ services:
     env_file:
       -  ../envs/common-user-ops-indexer.env
     environment:
-      - USER_OPS_INDEXER__INDEXER__RPC_URL=${USER_OPS_INDEXER__INDEXER__RPC_URL:-ws://host.docker.internal:8545/}
-      - USER_OPS_INDEXER__DATABASE__CONNECT__URL=${USER_OPS_INDEXER__DATABASE__CONNECT__URL:-postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout}
+      - USER_OPS_INDEXER__INDEXER__RPC_URL=https://evm-ignition-0.hoku.sh/
+      - USER_OPS_INDEXER__DATABASE__CONNECT__URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
       - USER_OPS_INDEXER__DATABASE__RUN_MIGRATIONS=true
