--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -396,6 +396,7 @@ RE_CAPTCHA_V3_CLIENT_KEY=
 RE_CAPTCHA_DISABLED=false
 # RE_CAPTCHA_CHECK_HOSTNAME
 # RE_CAPTCHA_SCORE_THRESHOLD
+# RE_CAPTCHA_BYPASS_TOKEN
 JSON_RPC=
 # API_RATE_LIMIT_HAMMER_REDIS_URL=redis://redis-db:6379/1
 # API_RATE_LIMIT_IS_BLOCKSCOUT_BEHIND_PROXY=false
