feat: backfill for Arbitrum-specific information in blocks and transactions (#11163)
* preparation for backfiller functionality

* doc comments for Indexer.Block.Fetcher.Receipts

* documentation comments added

* draft of the backfill task

* credo, format, spelling issues fixed

* the backfill orchestaration finalized

* proper handling of receipts list returned by eth_getBlockReceipts

* default increased to progress faster on the chains where backfill is not needed

* logging improved

* DB tables updated with changing updated_at

* documentation added

* the backfill fetcher is disabled by default

* merge issues addressed and documentation improved

* documentation improved

* formatting in the module documentation adjusted

* duplicated specs removed as per code review comments

* restored link to the specification

* fetching receipts fallback

* format issuse fixed

* Proper type cast

* proper selection of chunk size half

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -275,6 +275,9 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_ARBITRUM_TRACKING_MESSAGES_ON_L1_RECHECK_INTERVAL=
 # INDEXER_ARBITRUM_MISSED_MESSAGES_RECHECK_INTERVAL=
 # INDEXER_ARBITRUM_MISSED_MESSAGES_BLOCKS_DEPTH=
+# INDEXER_ARBITRUM_DATA_BACKFILL_ENABLED=
+# INDEXER_ARBITRUM_DATA_BACKFILL_UNINDEXED_BLOCKS_RECHECK_INTERVAL=
+# INDEXER_ARBITRUM_DATA_BACKFILL_BLOCKS_DEPTH=
 # ARBITRUM_DA_RECORDS_NORMALIZATION_MIGRATION_BATCH_SIZE=
 # ARBITRUM_DA_RECORDS_NORMALIZATION_MIGRATION_CONCURRENCY=
 # CELO_CORE_CONTRACTS=
