rename containers to avoid conflicts on node

--- a/docker-compose/envs/common-user-ops-indexer.env
+++ b/docker-compose/envs/common-user-ops-indexer.env
@@ -27,7 +27,7 @@ USER_OPS_INDEXER__INDEXER__PAST_DB_LOGS_INDEXER__START_BLOCK=-100000
 USER_OPS_INDEXER__INDEXER__PAST_DB_LOGS_INDEXER__END_BLOCK=0
 
 ## (required) no default value available
-USER_OPS_INDEXER__DATABASE__CONNECT__URL="postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout"
+USER_OPS_INDEXER__DATABASE__CONNECT__URL="postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@block-explorer-db:5432/blockscout"
 
 # OR
 #USER_OPS_INDEXER__DATABASE__CONNECT__KV__HOST=
