--- a/docker-compose/services/frontend.yml
+++ b/docker-compose/services/frontend.yml
@@ -4,6 +4,6 @@ services:
     pull_policy: always
     platform: linux/amd64
     restart: always
-    container_name: 'frontend'
+    container_name: 'block-explorer-frontend'
     env_file:
       -  ../envs/common-frontend.env
