--- a/docker-compose/services/user-ops-indexer.yml
+++ b/docker-compose/services/user-ops-indexer.yml
@@ -4,12 +4,12 @@ services:
     pull_policy: always
     platform: linux/amd64
     restart: always
-    container_name: 'user-ops-indexer'
+    container_name: 'block-explorer-user-ops-indexer'
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     env_file:
       -  ../envs/common-user-ops-indexer.env
     environment:
       - USER_OPS_INDEXER__INDEXER__RPC_URL=wss://evm-ignition-0.hoku.sh/
-      - USER_OPS_INDEXER__DATABASE__CONNECT__URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
+      - USER_OPS_INDEXER__DATABASE__CONNECT__URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@block-explorer-db:5432/blockscout
       - USER_OPS_INDEXER__DATABASE__RUN_MIGRATIONS=true
