--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -3,7 +3,7 @@ ETHEREUM_JSONRPC_VARIANT=geth
 ETHEREUM_JSONRPC_HTTP_URL=https://evm-ignition-0.hoku.sh/
 ETHEREUM_JSONRPC_WS_URL: wss://evm-ignition-0.hoku.sh/
 ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=https://evm-ignition-1.hoku.sh/
-DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
+DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@block-explorer-db:5432/blockscout
 
 # DATABASE_EVENT_URL=
 # DATABASE_QUEUE_TARGET
@@ -406,25 +406,25 @@ RE_CAPTCHA_DISABLED=false
 # RE_CAPTCHA_CHECK_HOSTNAME
 # RE_CAPTCHA_SCORE_THRESHOLD
 JSON_RPC=
-# API_RATE_LIMIT_HAMMER_REDIS_URL=redis://redis-db:6379/1
+# API_RATE_LIMIT_HAMMER_REDIS_URL=redis://block-explorer-redis-db:6379/1
 # API_RATE_LIMIT_IS_BLOCKSCOUT_BEHIND_PROXY=false
 API_RATE_LIMIT_UI_V2_TOKEN_TTL_IN_SECONDS=18000
 FETCH_REWARDS_WAY=trace_block
 MICROSERVICE_SC_VERIFIER_ENABLED=true
-# MICROSERVICE_SC_VERIFIER_URL=http://smart-contract-verifier:8050/
+# MICROSERVICE_SC_VERIFIER_URL=http://block-explorer-smart-contract-verifier:8050/
 # MICROSERVICE_SC_VERIFIER_TYPE=sc_verifier
 MICROSERVICE_SC_VERIFIER_URL=https://eth-bytecode-db.services.blockscout.com/
 MICROSERVICE_SC_VERIFIER_TYPE=eth_bytecode_db
 MICROSERVICE_ETH_BYTECODE_DB_INTERVAL_BETWEEN_LOOKUPS=10m
 MICROSERVICE_ETH_BYTECODE_DB_MAX_LOOKUPS_CONCURRENCY=10
 MICROSERVICE_VISUALIZE_SOL2UML_ENABLED=true
-MICROSERVICE_VISUALIZE_SOL2UML_URL=http://visualizer:8050/
+MICROSERVICE_VISUALIZE_SOL2UML_URL=http://block-explorer-visualizer:8050/
 MICROSERVICE_SIG_PROVIDER_ENABLED=true
-MICROSERVICE_SIG_PROVIDER_URL=http://sig-provider:8050/
+MICROSERVICE_SIG_PROVIDER_URL=http://block-explorer-sig-provider:8050/
 # MICROSERVICE_BENS_URL=
 # MICROSERVICE_BENS_ENABLED=
 MICROSERVICE_ACCOUNT_ABSTRACTION_ENABLED=false
-MICROSERVICE_ACCOUNT_ABSTRACTION_URL=http://user-ops-indexer:8050/
+MICROSERVICE_ACCOUNT_ABSTRACTION_URL=http://block-explorer-user-ops-indexer:8050/
 # MICROSERVICE_METADATA_URL=
 # MICROSERVICE_METADATA_ENABLED=
 # MICROSERVICE_METADATA_PROXY_REQUESTS_TIMEOUT=
@@ -449,7 +449,7 @@ DECODE_NOT_A_CONTRACT_CALLS=true
 # ACCOUNT_SIWE_MESSAGE=
 ACCOUNT_CLOAK_KEY=
 ACCOUNT_ENABLED=false
-ACCOUNT_REDIS_URL=redis://redis-db:6379
+ACCOUNT_REDIS_URL=redis://block-explorer-redis-db:6379
 EIP_1559_ELASTICITY_MULTIPLIER=2
 # MIXPANEL_TOKEN=
 # MIXPANEL_URL=
