--- a/docker-compose/proxy/default.conf.template
+++ b/docker-compose/proxy/default.conf.template
@@ -43,7 +43,7 @@ server {
     add_header 'Access-Control-Allow-Methods' 'PUT, GET, POST, OPTIONS, DELETE, PATCH' always;
 
     location / {
-        proxy_pass            http://stats:8050/;
+        proxy_pass            http://block-explorer-stats:8050/;
         proxy_http_version    1.1;
         proxy_set_header      Host "$host";
         proxy_set_header      X-Real-IP "$remote_addr";
@@ -66,7 +66,7 @@ server {
     add_header 'Access-Control-Allow-Headers' 'DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,x-csrf-token' always;
 
     location / {
-        proxy_pass            http://visualizer:8050/;
+        proxy_pass            http://block-explorer-visualizer:8050/;
         proxy_http_version    1.1;
         proxy_buffering       off;
         proxy_set_header      Host "$host";
