--- a/docker-compose/services/db.yml
+++ b/docker-compose/services/db.yml
@@ -14,7 +14,7 @@ services:
     user: 2000:2000
     shm_size: 256m
     restart: always
-    container_name: 'db'
+    container_name: 'block-explorer-db'
     command: postgres -c 'max_connections=200' -c 'client_connection_check_interval=60000'
     environment:
         POSTGRES_DB: 'blockscout'
