--- a/docker-compose/services/redis.yml
+++ b/docker-compose/services/redis.yml
@@ -1,7 +1,7 @@
 services:
   redis-db:
     image: 'redis:alpine'
-    container_name: redis-db
+    container_name: 'block-explorer-redis-db'
     command: redis-server
     volumes:
       - ./redis-data:/data
