--- a/docker-compose/services/stats.yml
+++ b/docker-compose/services/stats.yml
@@ -14,7 +14,7 @@ services:
     user: 2000:2000
     shm_size: 256m
     restart: always
-    container_name: 'stats-db'
+    container_name: 'block-explorer-stats-db'
     command: postgres -c 'max_connections=200'
     environment:
         POSTGRES_DB: 'stats'
@@ -37,13 +37,13 @@ services:
     pull_policy: always
     platform: linux/amd64
     restart: always
-    container_name: 'stats'
+    container_name: 'block-explorer-stats'
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     env_file:
       -  ../envs/common-stats.env
     environment:
-      - STATS__DB_URL=${STATS__DB_URL:-postgres://stats:n0uejXPl61ci6ldCuE2gQU5Y@stats-db:5432/stats}
-      - STATS__BLOCKSCOUT_DB_URL=${STATS__BLOCKSCOUT_DB_URL:-postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout}
+      - STATS__DB_URL=${STATS__DB_URL:-postgres://stats:n0uejXPl61ci6ldCuE2gQU5Y@block-explorer-stats-db:5432/stats}
+      - STATS__BLOCKSCOUT_DB_URL=${STATS__BLOCKSCOUT_DB_URL:-postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@block-explorer-db:5432/blockscout}
       - STATS__CREATE_DATABASE=${STATS__CREATE_DATABASE:-true}
       - STATS__RUN_MIGRATIONS=${STATS__RUN_MIGRATIONS:-true}
