--- a/docker-compose/workdir/caddy/Caddyfile
+++ b/docker-compose/workdir/caddy/Caddyfile
@@ -1,12 +1,12 @@
 explorer.testnet.hoku.sh {
-  reverse_proxy proxy:5000
+  reverse_proxy block-explorer-proxy:5000
   tls infra@3box.io
 }
 explorer-stats.testnet.hoku.sh {
-  reverse_proxy stats:8080
+  reverse_proxy block-explorer-stats:8080
   tls infra@3box.io
 }
 explorer-visualize.testnet.hoku.sh {
-  reverse_proxy proxy:8081
+  reverse_proxy block-explorer-proxy:8081
   tls infra@3box.io
 }
