feat: initial treasure deployment with base envs (#2)
* init envs

* fix: comment out Treasure Market for now

--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,17 +1,40 @@
+## App Configuration
+# NEXT_PUBLIC_API_HOST=treasurescan.io
+NEXT_PUBLIC_APP_ENV=staging
 NEXT_PUBLIC_API_HOST=localhost
 NEXT_PUBLIC_API_PROTOCOL=http
-NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
-NEXT_PUBLIC_NETWORK_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_SHORT_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_ID=5
-NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Ether
-NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=ETH
+
+## Blockchain Parameters
+NEXT_PUBLIC_NETWORK_NAME=Treasure
+NEXT_PUBLIC_NETWORK_SHORT_NAME=Treasure
+NEXT_PUBLIC_NETWORK_ID=61166
+NEXT_PUBLIC_NETWORK_RPC_URL=https://rpc.treasure.lol
+NEXT_PUBLIC_NETWORK_CURRENCY_NAME=MAGIC
+NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=MAGIC
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
 NEXT_PUBLIC_API_BASE_PATH=/
 NEXT_PUBLIC_APP_HOST=localhost
 NEXT_PUBLIC_APP_PROTOCOL=http
 NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs']
 NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8081
-NEXT_PUBLIC_IS_TESTNET=true
+NEXT_PUBLIC_IS_TESTNET=false
+
+# API Configuration
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=ws
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+
+## Footer
+# NEXT_PUBLIC_FOOTER_LINKS
+
+## Meta
+NEXT_PUBLIC_PROMOTE_BLOCKSCOUT_IN_TITLE=false
+
+## NFT Views
+# NEXT_PUBLIC_VIEWS_NFT_MARKETPLACES=[{'name':'Treasure Market','collection_url':'https://market.treasure.lol/collections/{hash}','instance_url':'https://market.treasure.lol/collections/{hash}/{id}','logo_url':'https://opensea.io/static/images/logos/opensea-logo.svg'}]	
+
+## Blockchain Statistics
+NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
+
+## Web3 Wallet Integration
+NEXT_PUBLIC_WEB3_WALLETS=[]
+NEXT_PUBLIC_WEB3_DISABLE_ADD_TOKEN_TO_WALLET=false
