--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -39,17 +39,17 @@ services:
         ETHEREUM_JSONRPC_WS_URL: wss://evm-ignition-0.hoku.sh/
         CHAIN_ID: '2481632'
 
-  nft_media_handler:
-    depends_on:
-      - backend
-    extends:
-      file: ./services/nft_media_handler.yml
-      service: nft_media_handler
-    build:
-      context: ..
-      dockerfile: ./docker/Dockerfile
-      args:
-        RELEASE_VERSION: 6.10.1
+  # nft_media_handler:
+  #   depends_on:
+  #     - backend
+  #   extends:
+  #     file: ./services/nft_media_handler.yml
+  #     service: nft_media_handler
+  #   build:
+  #     context: ..
+  #     dockerfile: ./docker/Dockerfile
+  #     args:
+  #       RELEASE_VERSION: 6.10.1
 
   visualizer:
     extends:
