split network specific envs into separate files

--- a/docker-compose/envs/common-user-ops-indexer.env
+++ b/docker-compose/envs/common-user-ops-indexer.env
@@ -11,8 +11,7 @@ USER_OPS_INDEXER__SERVER__GRPC__ADDR=0.0.0.0:8051
 USER_OPS_INDEXER__API__MAX_PAGE_SIZE=100
 
 ## (required) no default value available
-# TODO: this doesn't seem to have an effect since there is a value set in `services/user-ops-indexer.yml`
-USER_OPS_INDEXER__INDEXER__RPC_URL="wss://evm-ignition-0.hoku.sh/"
+# USER_OPS_INDEXER__INDEXER__RPC_URL=""
 USER_OPS_INDEXER__INDEXER__CONCURRENCY=20
 USER_OPS_INDEXER__INDEXER__ENTRYPOINTS__V06=true
 USER_OPS_INDEXER__INDEXER__ENTRYPOINTS__V07=true
@@ -26,9 +25,8 @@ USER_OPS_INDEXER__INDEXER__PAST_DB_LOGS_INDEXER__ENABLED=true
 USER_OPS_INDEXER__INDEXER__PAST_DB_LOGS_INDEXER__START_BLOCK=-100000
 USER_OPS_INDEXER__INDEXER__PAST_DB_LOGS_INDEXER__END_BLOCK=0
 
-## (required) no default value available
+## (required)
 USER_OPS_INDEXER__DATABASE__CONNECT__URL="postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@block-explorer-db:5432/blockscout"
-
 # OR
 #USER_OPS_INDEXER__DATABASE__CONNECT__KV__HOST=
 #USER_OPS_INDEXER__DATABASE__CONNECT__KV__PORT=
@@ -44,7 +42,7 @@ USER_OPS_INDEXER__METRICS__ADDR=0.0.0.0:6060
 USER_OPS_INDEXER__METRICS__ROUTE=/metrics
 
 USER_OPS_INDEXER__JAEGER__ENABLED=false
-#USER_OPS_INDEXER__JAEGER__AGENT_ENDPOINT=localhost:6831
+# USER_OPS_INDEXER__JAEGER__AGENT_ENDPOINT=localhost:6831
 
 USER_OPS_INDEXER__TRACING__ENABLED=true
 USER_OPS_INDEXER__TRACING__FORMAT=default
