--- a/docker-compose/services/nginx.yml
+++ b/docker-compose/services/nginx.yml
@@ -7,8 +7,8 @@ services:
     volumes:
       - "../proxy:/etc/nginx/templates"
     environment:
-      BACK_PROXY_PASS: ${BACK_PROXY_PASS:-http://block-explorer-backend:4000}
-      FRONT_PROXY_PASS: ${FRONT_PROXY_PASS:-http://block-explorer-frontend:3000}
+      BACK_PROXY_PASS: http://block-explorer-backend:4000
+      FRONT_PROXY_PASS: http://block-explorer-frontend:3000
     ports:
       - target: 5000
         published: 5000
