--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,12 +1,12 @@
 ETHEREUM_JSONRPC_VARIANT=geth
-ETHEREUM_JSONRPC_HTTP_URL=https://rpc.uomi.ai/
+ETHEREUM_JSONRPC_HTTP_URL=https://finney.uomi.ai/
 # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
 DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
 # DATABASE_EVENT_URL=
 # DATABASE_QUEUE_TARGET
 # TEST_DATABASE_URL=
 # TEST_DATABASE_READ_ONLY_API_URL=
-ETHEREUM_JSONRPC_TRACE_URL=https://rpc.uomi.ai/
+ETHEREUM_JSONRPC_TRACE_URL=https://finney.uomi.ai/
 # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL=
 # ETHEREUM_JSONRPC_FALLBACK_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_ETH_CALL_URL=
