--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -86,7 +86,7 @@ BLOCK_TRANSFORMER=base
 # FIRST_BLOCK=
 # LAST_BLOCK=
 # TRACE_BLOCK_RANGES=
-# TRACE_FIRST_BLOCK=
+TRACE_FIRST_BLOCK=none
 # TRACE_LAST_BLOCK=
 # FOOTER_CHAT_LINK=
 # FOOTER_FORUM_LINK_ENABLED=
