--- a/docker-compose/services/frontend.yml
+++ b/docker-compose/services/frontend.yml
@@ -7,3 +7,13 @@ services:
     container_name: 'block-explorer-frontend'
     env_file:
       -  ../envs/common-frontend.env
+    environment:
+      - NEXT_PUBLIC_API_PORT=${NEXT_PUBLIC_API_PORT}
+      - NEXT_PUBLIC_API_HOST=${NEXT_PUBLIC_API_HOST}
+      - NEXT_PUBLIC_API_PROTOCOL=${NEXT_PUBLIC_API_PROTOCOL}
+      - NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=${NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL}
+      - NEXT_PUBLIC_STATS_API_HOST=${NEXT_PUBLIC_STATS_API_HOST}
+      - NEXT_PUBLIC_APP_HOST=${NEXT_PUBLIC_APP_HOST}
+      - NEXT_PUBLIC_APP_PROTOCOL=${NEXT_PUBLIC_APP_PROTOCOL}
+      - NEXT_PUBLIC_VISUALIZE_API_HOST=${NEXT_PUBLIC_VISUALIZE_API_HOST}
+      - NEXT_PUBLIC_IS_TESTNET=${NEXT_PUBLIC_IS_TESTNET}
