--- a/docker-compose/envs/localnet.env
+++ b/docker-compose/envs/localnet.env
@@ -1,10 +1,10 @@
 CHAIN_ID='248163216'
 
 # backend
-ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8545
-ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545
-ETHEREUM_JSONRPC_WS_URL=ws://host.docker.internal:8545
-ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
+ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8645
+ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8645
+ETHEREUM_JSONRPC_WS_URL=ws://host.docker.internal:8645
+ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=http://host.docker.internal:8745
 
 # frontend
 NEXT_PUBLIC_API_PORT=5000
@@ -18,9 +18,9 @@ NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8081
 NEXT_PUBLIC_IS_TESTNET=true
 
 # stats
-STATS__BLOCKSCOUT_API_URL=http://host.docker.internal
+STATS__BLOCKSCOUT_API_URL=http://host.docker.internal:5000
 
 # user ops indexer
-USER_OPS_INDEXER__INDEXER__RPC_URL=http://host.docker.internal:8545
+USER_OPS_INDEXER__INDEXER__RPC_URL=ws://host.docker.internal:8645 # eth api facade
 USER_OPS_INDEXER__DATABASE__CONNECT__URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@block-explorer-db:5432/blockscout
 USER_OPS_INDEXER__DATABASE__RUN_MIGRATIONS=true
