--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -22,7 +22,7 @@ ETHEREUM_JSONRPC_TRACE_URL=https://finney.uomi.ai/
 # ETHEREUM_JSONRPC_HTTP_HEADERS=
 # ETHEREUM_JSONRPC_HTTP_GZIP_ENABLED=
 # ETHEREUM_JSONRPC_WAIT_PER_TIMEOUT=
-ETHEREUM_JSONRPC_GETH_TRACE_BY_BLOCK=false
+# ETHEREUM_JSONRPC_GETH_TRACE_BY_BLOCK=
 # ETHEREUM_JSONRPC_GETH_ALLOW_EMPTY_TRACES=
 # ETHEREUM_JSONRPC_DEBUG_TRACE_TRANSACTION_TIMEOUT=
 # ETHEREUM_JSONRPC_HTTP_URLS=
