Add env to docker-compose/envs/common-blockscout.env

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -137,6 +137,7 @@ CONTRACT_MAX_STRING_LENGTH_WITHOUT_TRIMMING=2040
 # CONTRACT_AUDIT_REPORTS_AIRTABLE_URL=
 # CONTRACT_AUDIT_REPORTS_AIRTABLE_API_KEY=
 # CONTRACT_CERTIFIED_LIST=
+# CONTRACT_ALLOWED_PARTIAL_REVERIFICATION=
 UNCLES_IN_AVERAGE_BLOCK_TIME=false
 DISABLE_WEBAPP=true
 ADMIN_PANEL_ENABLED=false
