chore: Add env var for realtime fetcher polling period

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -292,6 +292,7 @@ INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER=false
 # INDEXER_DISABLE_FILECOIN_ADDRESS_INFO_FETCHER=false
 # INDEXER_FILECOIN_ADDRESS_INFO_CONCURRENCY=1
 # INDEXER_REALTIME_FETCHER_MAX_GAP=
+# INDEXER_REALTIME_FETCHER_POLLING_PERIOD=
 # INDEXER_FETCHER_INIT_QUERY_LIMIT=
 # INDEXER_TOKEN_BALANCES_FETCHER_INIT_QUERY_LIMIT=
 # INDEXER_COIN_BALANCES_FETCHER_INIT_QUERY_LIMIT=
