fix: sanitize addresses of smart contracts having `verified` set to `false`  (#11727)
* refactor: move `create_or_update_smart_contract/2` to `SmartContract` module

* refactor: consolidate `publish_smart_contract/3` and `publish_smart_contract/4` clauses

* fix: add sanitizer of addresses

* chore: add doc and spec

* feat: configure migration batch size and concurrency with envs

* feat: update cache when migration is finished

* fix: add fallback for the case when value in the cache was not set

* chore: process review by @nikitosing

* feat: add `MIGRATION_SANITIZE_VERIFIED_ADDRESSES_DISABLED`

* process review comments

* chore: configure migration timeout with env

* chore: add new envs to `common-blockscout.env`

* chore: log success ensuring `{:ok, smart_contract}` is returned from `SmartContract.create_or_update_smart_contract/3`

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -473,6 +473,10 @@ EIP_1559_ELASTICITY_MULTIPLIER=2
 # MIGRATION_REFETCH_CONTRACT_CODES_CONCURRENCY=
 # MIGRATION_BACKFILL_MULTICHAIN_SEARCH_BATCH_SIZE=
 # MIGRATION_HEAVY_INDEX_OPERATIONS_CHECK_INTERVAL=
+# MIGRATION_SANITIZE_VERIFIED_ADDRESSES_DISABLED=false
+# MIGRATION_SANITIZE_VERIFIED_ADDRESSES_BATCH_SIZE=500
+# MIGRATION_SANITIZE_VERIFIED_ADDRESSES_CONCURRENCY=1
+# MIGRATION_SANITIZE_VERIFIED_ADDRESSES_TIMEOUT=0s
 SOURCIFY_INTEGRATION_ENABLED=false
 SOURCIFY_SERVER_URL=
 SOURCIFY_REPO_URL=
