chore: Runtime variable to manage chain spec processing delay

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -51,6 +51,7 @@ COIN_NAME=
 # TOKEN_BRIDGE_CONTRACT=
 EMISSION_FORMAT=DEFAULT
 # CHAIN_SPEC_PATH=
+# CHAIN_SPEC_PROCESSING_DELAY=
 # SUPPLY_MODULE=
 COIN=
 EXCHANGE_RATES_COIN=
