Add INDEXER_OPTIMISM_INTEROP_EXPORT_EXPIRATION_DAYS env

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -284,6 +284,7 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_OPTIMISM_INTEROP_PRIVATE_KEY=
 # INDEXER_OPTIMISM_INTEROP_CONNECT_TIMEOUT=
 # INDEXER_OPTIMISM_INTEROP_RECV_TIMEOUT=
+# INDEXER_OPTIMISM_INTEROP_EXPORT_EXPIRATION_DAYS=
 # INDEXER_SCROLL_L1_RPC=
 # INDEXER_SCROLL_L1_MESSENGER_CONTRACT=
 # INDEXER_SCROLL_L1_MESSENGER_START_BLOCK=
