fix: process review by @vbaranov

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -483,6 +483,9 @@ EIP_1559_ELASTICITY_MULTIPLIER=2
 # MIGRATION_TOKEN_INSTANCE_ERC_721_SANITIZE_CONCURRENCY=2
 # MIGRATION_TOKEN_INSTANCE_ERC_721_SANITIZE_BATCH_SIZE=10
 # MIGRATION_TOKEN_INSTANCE_ERC_721_SANITIZE_TOKENS_BATCH_SIZE=100
+# MIGRATION_SMART_CONTRACT_LANGUAGE_DISABLED=false
+# MIGRATION_SMART_CONTRACT_LANGUAGE_BATCH_SIZE=100
+# MIGRATION_SMART_CONTRACT_LANGUAGE_CONCURRENCY=1
 SOURCIFY_INTEGRATION_ENABLED=false
 SOURCIFY_SERVER_URL=
 SOURCIFY_REPO_URL=
