fix: empty contract code addresses

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -487,6 +487,8 @@ EIP_1559_ELASTICITY_MULTIPLIER=2
 # MIGRATION_SMART_CONTRACT_LANGUAGE_DISABLED=false
 # MIGRATION_SMART_CONTRACT_LANGUAGE_BATCH_SIZE=100
 # MIGRATION_SMART_CONTRACT_LANGUAGE_CONCURRENCY=1
+# MIGRATION_SANITIZE_EMPTY_CONTRACT_CODE_ADDRESSES_BATCH_SIZE=500
+# MIGRATION_SANITIZE_EMPTY_CONTRACT_CODE_ADDRESSES_CONCURRENCY=1
 SOURCIFY_INTEGRATION_ENABLED=false
 SOURCIFY_SERVER_URL=
 SOURCIFY_REPO_URL=
